@@ -1,0 +1,7 @@
+include setup.py MANIFEST.in
+include doc/README.txt doc/LICENSE ChangeLog
+include Makefile setuptools.mk
+include gracie/module.mk
+include tests/module.mk
+recursive-include bin *
+recursive-include doc *
