@@ -1,3 +1,7 @@
+2009-09-20  Ben Finney  <ben@benfinney.id.au>
+
+	* Manage MANIFEST.in manually, under version control.
+
 2009-06-21  Ben Finney  <ben@benfinney.id.au>
 
 	Version 0.2.9 released.
